--- a/Toronto files with webscraping/Webscraping for toronto data.ipynb
+++ b/Toronto files with webscraping/Webscraping for toronto data.ipynb
@@ -14273,6 +14273,525 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "toronto_table.to_csv('toronto_wikitable.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting geocoder\n",
+      "  Downloading geocoder-1.38.1-py2.py3-none-any.whl (98 kB)\n",
+      "Requirement already satisfied: requests in c:\\users\\peddi\\anaconda3\\lib\\site-packages (from geocoder) (2.24.0)\n",
+      "Requirement already satisfied: click in c:\\users\\peddi\\anaconda3\\lib\\site-packages (from geocoder) (7.1.2)\n",
+      "Requirement already satisfied: six in c:\\users\\peddi\\anaconda3\\lib\\site-packages (from geocoder) (1.15.0)\n",
+      "Requirement already satisfied: future in c:\\users\\peddi\\anaconda3\\lib\\site-packages (from geocoder) (0.18.2)\n",
+      "Collecting ratelim\n",
+      "  Downloading ratelim-0.1.6-py2.py3-none-any.whl (4.0 kB)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in c:\\users\\peddi\\anaconda3\\lib\\site-packages (from requests->geocoder) (1.25.9)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\peddi\\anaconda3\\lib\\site-packages (from requests->geocoder) (2020.6.20)\n",
+      "Requirement already satisfied: chardet<4,>=3.0.2 in c:\\users\\peddi\\anaconda3\\lib\\site-packages (from requests->geocoder) (3.0.4)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\peddi\\anaconda3\\lib\\site-packages (from requests->geocoder) (2.10)\n",
+      "Requirement already satisfied: decorator in c:\\users\\peddi\\anaconda3\\lib\\site-packages (from ratelim->geocoder) (4.4.2)\n",
+      "Installing collected packages: ratelim, geocoder\n",
+      "Successfully installed geocoder-1.38.1 ratelim-0.1.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install geocoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2      M3A\n",
+       "3      M4A\n",
+       "4      M5A\n",
+       "5      M6A\n",
+       "6      M7A\n",
+       "      ... \n",
+       "160    M8X\n",
+       "165    M4Y\n",
+       "168    M7Y\n",
+       "169    M8Y\n",
+       "178    M8Z\n",
+       "Name: Postal Code, Length: 103, dtype: object"
+      ]
+     },
+     "execution_count": 212,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "toronto_table['Postal Code']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'D:\\\\Data science\\\\DS Coursera IBM\\\\Capstone project\\\\Toronto project'"
+      ]
+     },
+     "execution_count": 216,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.chdir('D:\\Data science\\DS Coursera IBM\\Capstone project\\Toronto project')\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<[REQUEST_DENIED] Google - Geocode [empty]>"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "geocoder.google('M8Z, Toronto, Ontario')#.format(toronto_table['Postal Code']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import geocoder # import geocoder\n",
+    "# initialize your variable to None\n",
+    "#lat_lng_coords = None\n",
+    "# loop until you get the coordinates\n",
+    "#while(lat_lng_coords is None):\n",
+    "#    g = geocoder.google('{}, Toronto, Ontario'.format(toronto_table['Postal Code']))\n",
+    "#    lat_lng_coords = g.latlng\n",
+    "#latitude = lat_lng_coords[0]\n",
+    "#longitude = lat_lng_coords[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M1B</td>\n",
+       "      <td>43.806686</td>\n",
+       "      <td>-79.194353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M1C</td>\n",
+       "      <td>43.784535</td>\n",
+       "      <td>-79.160497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M1E</td>\n",
+       "      <td>43.763573</td>\n",
+       "      <td>-79.188711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M1G</td>\n",
+       "      <td>43.770992</td>\n",
+       "      <td>-79.216917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M1H</td>\n",
+       "      <td>43.773136</td>\n",
+       "      <td>-79.239476</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Postal Code   Latitude  Longitude\n",
+       "0         M1B  43.806686 -79.194353\n",
+       "1         M1C  43.784535 -79.160497\n",
+       "2         M1E  43.763573 -79.188711\n",
+       "3         M1G  43.770992 -79.216917\n",
+       "4         M1H  43.773136 -79.239476"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "latnlong=pd.read_csv('Geospatial_Coordinates.csv')\n",
+    "latnlong.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>M5A</td>\n",
+       "      <td>43.65426</td>\n",
+       "      <td>-79.360636</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Postal Code  Latitude  Longitude\n",
+       "53         M5A  43.65426 -79.360636"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "latnlong[(latnlong['Postal Code']=='M5A')] "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- To check whether the data is correctly joined wrt to Postal code and it matches right for M5A postal code lat and log coordinates to the lat and long coordinates of toronto table\n",
+    "- So both the tables merged correctly "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(103, 3)"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "latnlong.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Neighbourhood</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M3A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Parkwoods</td>\n",
+       "      <td>43.753259</td>\n",
+       "      <td>-79.329656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M4A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Victoria Village</td>\n",
+       "      <td>43.725882</td>\n",
+       "      <td>-79.315572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M5A</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Regent Park, Harbourfront</td>\n",
+       "      <td>43.654260</td>\n",
+       "      <td>-79.360636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M6A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Lawrence Manor, Lawrence Heights</td>\n",
+       "      <td>43.718518</td>\n",
+       "      <td>-79.464763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M7A</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Queen's Park, Ontario Provincial Government</td>\n",
+       "      <td>43.662301</td>\n",
+       "      <td>-79.389494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>M8X</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>The Kingsway, Montgomery Road, Old Mill North</td>\n",
+       "      <td>43.653654</td>\n",
+       "      <td>-79.506944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>M4Y</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Church and Wellesley</td>\n",
+       "      <td>43.665860</td>\n",
+       "      <td>-79.383160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>M7Y</td>\n",
+       "      <td>East Toronto</td>\n",
+       "      <td>Business reply mail Processing Centre, South C...</td>\n",
+       "      <td>43.662744</td>\n",
+       "      <td>-79.321558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>M8Y</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Old Mill South, King's Mill Park, Sunnylea, Hu...</td>\n",
+       "      <td>43.636258</td>\n",
+       "      <td>-79.498509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>M8Z</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Mimico NW, The Queensway West, South of Bloor,...</td>\n",
+       "      <td>43.628841</td>\n",
+       "      <td>-79.520999</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>103 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Postal Code           Borough  \\\n",
+       "0           M3A        North York   \n",
+       "1           M4A        North York   \n",
+       "2           M5A  Downtown Toronto   \n",
+       "3           M6A        North York   \n",
+       "4           M7A  Downtown Toronto   \n",
+       "..          ...               ...   \n",
+       "98          M8X         Etobicoke   \n",
+       "99          M4Y  Downtown Toronto   \n",
+       "100         M7Y      East Toronto   \n",
+       "101         M8Y         Etobicoke   \n",
+       "102         M8Z         Etobicoke   \n",
+       "\n",
+       "                                         Neighbourhood   Latitude  Longitude  \n",
+       "0                                            Parkwoods  43.753259 -79.329656  \n",
+       "1                                     Victoria Village  43.725882 -79.315572  \n",
+       "2                            Regent Park, Harbourfront  43.654260 -79.360636  \n",
+       "3                     Lawrence Manor, Lawrence Heights  43.718518 -79.464763  \n",
+       "4          Queen's Park, Ontario Provincial Government  43.662301 -79.389494  \n",
+       "..                                                 ...        ...        ...  \n",
+       "98       The Kingsway, Montgomery Road, Old Mill North  43.653654 -79.506944  \n",
+       "99                                Church and Wellesley  43.665860 -79.383160  \n",
+       "100  Business reply mail Processing Centre, South C...  43.662744 -79.321558  \n",
+       "101  Old Mill South, King's Mill Park, Sunnylea, Hu...  43.636258 -79.498509  \n",
+       "102  Mimico NW, The Queensway West, South of Bloor,...  43.628841 -79.520999  \n",
+       "\n",
+       "[103 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_left = pd.merge(left=toronto_table, right=latnlong, how='left', left_on='Postal Code', right_on='Postal Code')\n",
+    "merged_left"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Postal Code      0\n",
+       "Borough          0\n",
+       "Neighbourhood    0\n",
+       "Latitude         0\n",
+       "Longitude        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_left.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(103, 5)"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_left.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_left.to_csv('toronto_with_latnlong.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
