Update Segmenting and clustering the neighbourhoods in Toronto.ipynb

--- a/Toronto files with webscraping/Segmenting and clustering the neighbourhoods in Toronto.ipynb
+++ b/Toronto files with webscraping/Segmenting and clustering the neighbourhoods in Toronto.ipynb
@@ -1590,8 +1590,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CLIENT_ID = 'PL0VH1QJYGQJLTXMZ51DBMDUQRPJQ3HSJRXJYVDMO5DTXENS' # your Foursquare ID\n",
-    "CLIENT_SECRET = 'VYOLXAIYEVC4PCF0MNTC3MFKRMTAJQYPL1AD3MZAHSOA5BLM' # your Foursquare Secret\n",
+    "CLIENT_ID = '' # your Foursquare ID\n",
+    "CLIENT_SECRET = '' # your Foursquare Secret\n",
     "VERSION = '20201019' # Foursquare API version #yyyymmdd\n",
     "LIMIT = 100 # A default Foursquare API limit value\n",
     "\n",
